# HEAT

./: .ccls  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  HEAT.sublime-project  LICENSE  README.md  Vagrantfile  client.cpp  compile_commands.json  format-repo.sh  main.cpp  server.cpp  viewer.cpp
.github/workflows/: main.yml
IO/: CMakeLists.txt  InputMemoryBitStream.cpp  InputMemoryBitStream.h  InputStream.h  JsonInputMemoryStream.h  JsonOutputMemoryStream.h  OutputMemoryBitStream.cpp  OutputMemoryBitStream.h  OutputStream.h  StructuredDataReader.h  StructuredDataWriter.h  shared.cpp  shared.h
console/: CMakeLists.txt  console.cpp  console.h
console/linenoise/: linenoise.h
controls/: CMakeLists.txt  InputManager.cpp  InputManager.h
datastructures/: CMakeLists.txt  ThreadSafeQueue.h  Trie.cpp  Trie.h
debugging_tools/: CMakeLists.txt  README.md  debug_commands.cpp  debug_commands.h  debug_socket.cpp  debug_socket.h  debug_tools.cpp  debug_tools.h
dvr/: CMakeLists.txt  DVR.cpp  DVR.h  DVRConsoleCommands.cpp  DVRConsoleCommands.h  PacketReceivedEvent.h  PacketSentEvent.h
engine/: CMakeLists.txt  Engine.cpp  Engine.h  ServiceLocator.h  ServiceLocatorClient.h
events/: CMakeLists.txt  CreatePlayerOwnedObject.h  Event.h  EventManager.cpp  EventManager.h  EventRouter.h  LoggedIn.h  PhysicsComponentUpdate.h  PlayerInputEvent.h  RemoveClientOwnedGameObjectsEvent.h  RemoveGameObjectEvent.h
gameobjects/: CMakeLists.txt  PhysicsComponent.h  Player.cpp  Player.h  PlayerClient.cpp  PlayerClient.h  PlayerServer.cpp  PlayerServer.h  Registry.cpp  Registry.h  SetupGameObjects.h  SimpleGameObject.cpp  SimpleGameObject.h  World.cpp  World.h  WorldClient.cpp  WorldClient.h
graphics/: AnimatedSpriteComponent.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  DrawableComponent.h  GraphicsDriver.cpp  GraphicsDriver.h  RenderManager.h  SpriteComponent.h  SpriteSheetData.h  StaticSpriteComponent.h  Texture.h  TextureManager.cpp  TextureManager.h  TiledAnimatedSpriteSheetData.cpp  TiledAnimatedSpriteSheetData.h  TiledTileLoader.cpp  TiledTileLoader.h  WindowManager.cpp  WindowManager.h
holistic/: CMakeLists.txt  ConfigVar.h  Configurator.h  HNetworkManager.cpp  HNetworkManager.h  HNetworkManagerClient.h  README.md  SetupFuncs.h  SetupNetworking.cpp  SetupSerializers.cpp  SetupSerializers.h  SetupWorld.cpp
images/: megaman-sheet-data.json  player.json  ship-sheet.json
lib/catch/: CMakeLists.txt
logger/: CMakeLists.txt  Logger.cpp  Logger.h
managers/: CMakeLists.txt  ClientData.h  NetworkManager.cpp  NetworkManager.h  NetworkManagerClient.cpp  NetworkManagerClient.h  NetworkManagerServer.cpp  NetworkManagerServer.h  NullNetworkManagerClient.h  PacketManager.cpp  PacketManager.h  SequenceBuffer.h
math/: CMakeLists.txt  Vector3.cpp  Vector3.h
messages/: CMakeLists.txt  ClientConnectionChallengeMessage.h  ClientConnectionChallengeResponseMessage.h  ClientConnectionRequestMessage.h  ClientLoginMessage.h  ClientLoginResponse.h  ClientWelcomeMessage.h  LogoutMessage.h  Message.h  MessageSerializer.cpp  MessageSerializer.h  PlayerMessage.h
networking/: CMakeLists.txt  MessageInfo.h  PacketInfo.h  ReceivedMessage.h  ReceivedPacket.h  SocketAddress.cpp  SocketAddress.h  SocketAddressFactory.cpp  SocketAddressFactory.h  SocketConsts.h  SocketManager.cpp  SocketManager.h  SocketUtil.cpp  SocketUtil.h  UDPSocket.cpp  UDPSocket.h
packets/: AuthenticatedPacket.h  CMakeLists.txt  Message.h  MessageSerializer.cpp  MessageSerializer.h  Packet.h  PacketSerializer.cpp  PacketSerializer.h  PlayerPacket.h  ReliabilityPacket.h  ReliableOrderedPacket.h  UnauthenticatedPacket.h
sockets/: CMakeLists.txt  SocketAddress.h  SocketUtil.cpp
str_utils/: CMakeLists.txt  base64.cpp  str_utils.cpp  str_utils.h
tests/: CMakeLists.txt  bit-packets.cpp  json-packets.cpp  managers.cpp  packets.cpp
tiled/: heat-tiles.tiled-session
wireshark-plugin/: CMakeLists.txt  packet-heat.cpp  setup-wireshark.sh
